--- a/src/pages/my-cart/my-cart.html
+++ b/src/pages/my-cart/my-cart.html
@@ -10,11 +10,19 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Meu Carrinho</ion-title>
+    <ion-title>Meu Carrinho - R$ {{ cart.total }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-  <p>Seja bem vindo!</p>
+  <ion-list>
+    <ion-item *ngFor="let product of cart.items">
+      <ion-thumbnail item-left>
+        <img src="https://ionicframework.com/dist/preview-app/www/assets/img/avatar-ts-woody.png">
+      </ion-thumbnail>
+      <h2>{{ product.name }}</h2>
+      <p>R$ {{ product.price_initial }} <br /> {{ product.short_description }} </p>
+    </ion-item>
+  </ion-list>
 </ion-content>
